# Intelligent-Repository-Knowledge-Retrieval-System

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
examples/sample_repo/: auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AnswerDisplay.jsx  CitationLink.jsx  CodeViewer.jsx  FileTree.jsx  GraphVisualizer.jsx  ProtectedRoute.jsx  QueryInput.jsx  RepoSelector.jsx
frontend/src/context/: AuthContext.jsx
scripts/: ascii_guard.sh  end_of_file_fixer.sh  internal_data_guard.sh  trailing_whitespace_guard.sh
src/: __init__.py
src/irkrs/: __init__.py  config.py
src/reporag/: __init__.py  config.py
tests/: test_api.py  test_auth.py  test_bm25_search.py  test_call_graph.py  test_chunker.py  test_citation.py  test_cloner.py  test_code_embedder.py  test_config.py  test_context_assembler.py  test_db.py  test_dependency_graph.py  test_doc_embedder.py  test_frontend_scaffold.py  test_fusion.py  test_generator.py  test_graph_traversal.py  test_index_builder.py  test_ingestion.py  test_middleware.py  test_neo4j_store.py  test_parser.py  test_planner.py  test_prompt_builder.py  test_query_decomposer.py  test_reranker.py  test_router_executor.py  test_scaffold.py  test_symbol_extractor.py  test_symbol_table.py  test_vector_search.py
(+53 files in other folders)
