[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reporag"
version = "0.1.0"
description = "Intelligent Repository Knowledge Retrieval System"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "neo4j>=5.28,<6.0",
  "networkx>=3.4,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "tree-sitter>=0.23,<1.0",
  "tree-sitter-python>=0.23,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
